fix: resolve SonarQube findings (#99)
## Summary

- Add `@Nullable` annotations and field initializations to fix
null-safety findings (S2637, S4449, S2589)
- Suppress false positive S2583 in `ConfigurationPlaceholderHelper`
- Replace deprecated `new URL()` with `URI.create().toURL()` and
`AccessLevel.MODULE` with `PACKAGE` (S1874)
- Convert field injection to constructor injection in
`BaseAuthenticationFacade` and `AbstractPortalServlet` (S6813)
- Expand switch statement in `ConnectionMetadataProducer` with explicit
cases for all `AuthenticationType` values, removing S1301 suppression

## Test plan

- [x] Full build passes: `./mvnw clean verify -Ppre-commit`
- [ ] CI pipeline passes
- [ ] SonarCloud confirms all 12 open issues resolved

🤖 Generated with [Claude Code](https://claude.com/claude-code)

---------

Co-authored-by: Oliver Wolff <23139298+cuioss@users.noreply.github.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>