@@ -262,9 +262,12 @@ public class CuiRestClientBuilder {
      * @return this builder
      */
     public CuiRestClientBuilder url(final String url) {
+        if (null == url) {
+            throw new IllegalArgumentException("The URL 'null' could not be parsed!");
+        }
         try {
-            mpRestClientBuilder.baseUrl(new URL(url));
-        } catch (final MalformedURLException e) {
+            mpRestClientBuilder.baseUrl(URI.create(url).toURL());
+        } catch (final IllegalArgumentException | MalformedURLException e) {
             throw new IllegalArgumentException("The URL '" + url + "' could not be parsed!", e);
         }
         return this;
